# VINS-Mono

./: .gitignore  STYLING.md  install-deps.sh
ar_demo/src/: ar_demo_node.cpp
benchmark_publisher/src/: benchmark_publisher_node.cpp
camodocal/include/camodocal/calib/: CameraCalibration.h
camodocal/include/camodocal/camera_models/: Camera.h  CameraFactory.h  CataCamera.h  CostFunctionFactory.h  EquidistantCamera.h  PinholeCamera.h  ScaramuzzaCamera.h
camodocal/include/camodocal/chessboard/: Chessboard.h  Spline.h
camodocal/include/camodocal/sparse_graph/: Transform.h
camodocal/src/: intrinsic_calib.cc
camodocal/src/calib/: CameraCalibration.cc
camodocal/src/camera_models/: Camera.cc  CameraFactory.cc  CataCamera.cc  CostFunctionFactory.cc  EquidistantCamera.cc  PinholeCamera.cc  ScaramuzzaCamera.cc
camodocal/src/chessboard/: Chessboard.cc
config/euroc/: camera_config.yaml  feature_tracker_configs.yaml
feature_tracker/: CMakeLists.txt
feature_tracker/cmake/: feature_trackerConfig.cmake.in
feature_tracker/include/feature_tracker/: feature_tracker.h  feature_tracker.hpp  feature_tracker_observer.hpp  feature_tracker_observer_spdlog_rerun.hpp  parameters.h
feature_tracker/src/: feature_tracker.cpp  feature_tracker_observer.cpp  feature_tracker_observer_spdlog_rerun.cpp  main.cpp
feature_tracker_rerun/: CMakeLists.txt
feature_tracker_rerun/cmake/: feature_tracker_rerunConfig.cmake.in
feature_tracker_rerun/include/feature_tracker/: feature_tracker_observer_spdlog_rerun.hpp
feature_tracker_rerun/src/: feature_tracker_observer_spdlog_rerun.cpp  main.cpp
feature_tracker_ros/: CMakeLists.txt
feature_tracker_ros/include/feature_tracker_ros/: feature_tracker_node.hpp
feature_tracker_ros/launch/: feature_tracker.launch
feature_tracker_ros/src/: feature_tracker_node.cpp  ros_parameter_reader.cpp
pose_graph/: CMakeLists.txt
pose_graph/cmake/: pose_graphConfig.cmake.in
pose_graph/include/pose_graph/: keyframe.h  parameters.h  pose_graph.h  pose_graph.hpp  pose_graph_service.hpp
pose_graph/include/pose_graph/details/: keyframe.h  pose_graph.hpp  pose_graph_event_observer.hpp
pose_graph/include/pose_graph/utility/: utility.h
pose_graph/sample/: CMakeLists.txt  main.cpp
pose_graph/src/: keyframe.cpp  keyframe.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp  pose_graph_service.cpp
pose_graph/src/details/: keyframe.cpp  pose_graph.cpp
pose_graph/src/utility/: CameraPoseVisualization.cpp  utility.cpp
pose_graph_ros/: CMakeLists.txt  package.xml
pose_graph_ros/include/pose_graph_ros/: pose_graph_node.hpp
pose_graph_ros/include/pose_graph_ros/utility/: CameraPoseVisualization.h
pose_graph_ros/src/: pose_graph_node.cpp
pose_graph_ros/src/old/: pose_graph_node.cpp
pose_graph_ros/src/utility/: CameraPoseVisualization.cpp
vins_estimator/launch/: black_box.launch  cla.launch  euroc.launch  euroc_no_extrinsic_param.launch  realsense_color.launch  realsense_fisheye.launch  tum.launch
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.h  parameters_ros.cpp
vins_estimator/src/factor/: imu_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  projection_factor.cpp  projection_factor.h  projection_td_factor.cpp  projection_td_factor.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.h
vins_estimator/src/utility/: utility.h  visualization.cpp  visualization.h
